# P2Pearl

./: .gitignore  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: blueprint.md  running-a-node.md
examples/: local_demo.py
integration/: py-pearl-mining-nbits-override.md  stratum-dialect.md
packaging/: p2pearl.spec  p2pearl_launch.py
src/p2pearl/: __init__.py  __main__.py  cli.py  config.py  daemon.py  demo.py  gui.py
src/p2pearl/chain/: __init__.py  coinbase.py  node_rpc.py
src/p2pearl/consensus/: __init__.py  difficulty.py  pplns.py  share.py  sharechain.py  subsidy.py
src/p2pearl/p2p/: __init__.py  node.py
src/p2pearl/pow/: __init__.py  verify.py
src/p2pearl/stratum/: __init__.py  protocol.py  server.py
tests/: test_daemon.py  test_difficulty.py  test_gui.py  test_p2p.py  test_pplns.py  test_share.py  test_sharechain.py  test_stratum.py  test_subsidy.py  test_verify_share.py
tools/: apply_m2_binding.py  build_pearld_windows.ps1
